fix metrics